@@ -19,9 +19,10 @@
 //This need for resolving plugins in buildscripts
 plugins {
     id('idea')
+    alias(libs.plugins.ideaext)
     alias(libs.plugins.javacc) apply false
-    alias(libs.plugins.modernizer) apply false
     alias(libs.plugins.aggregateJavadoc)
+    alias(libs.plugins.spotbugs) apply false
 }
 
 apply from: "$rootDir/buildscripts/javadoc.gradle"
@@ -39,9 +40,31 @@ repositories {
 
 ext {
     repos = [
-            'apache-release'   : "https://repo.maven.apache.org/maven2/",
-            'apache-snapshot'  : "https://repository.apache.org/snapshots",
-            'apache-staging'   : 'https://repository.apache.org/service/local/staging/deploy/maven2'
+            'apache-release' : "https://repo.maven.apache.org/maven2/",
+            'apache-snapshot': "https://repository.apache.org/snapshots",
+            'apache-staging' : 'https://repository.apache.org/service/local/staging/deploy/maven2'
+    ]
+
+    defaultJvmArgs = [
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.math=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.time=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
+            "-Dio.netty.tryReflectionSetAccessible=true",
+            "-XX:+HeapDumpOnOutOfMemoryError",
+            "-ea"
+    ]
+
+    compilerArgs = [
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
     ]
 }
 
@@ -53,19 +76,12 @@ allprojects {
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 
-    tasks.withType(Test) {
+    tasks.withType(Test).configureEach {
         defaultCharacterEncoding = 'UTF-8'
 
-        jvmArgs += ["--add-opens=java.base/java.lang=ALL-UNNAMED",
-                "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-                "--add-opens=java.base/java.io=ALL-UNNAMED",
-                "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                "--add-opens=java.base/java.math=ALL-UNNAMED",
-                "--add-opens=java.base/java.util=ALL-UNNAMED",
-                "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-                "-Dio.netty.tryReflectionSetAccessible=true",
-                "-Djava.util.logging.config.file=${project.rootDir}/config/java.util.logging.properties"]
+        jvmArgs += defaultJvmArgs
+
+        systemProperty 'jraft.available_processors', 1
 
         if (project.hasProperty('excludeTest')) {
             exclude project.property('excludeTest')
@@ -79,12 +95,13 @@ allprojects {
     }
 
     tasks.withType(Javadoc) {
-        options.tags = [ "apiNote" ]
+        options.tags = ["apiNote"]
         options.addStringOption('bottom', javadocFooter())
     }
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
+        options.compilerArgs += compilerArgs
     }
 
     //Temporary hack to disable caching of Test tasks.
@@ -122,4 +139,16 @@ subprojects {
     }
 
     tasks.register('printSubDependencies', DependencyReportTask)
+}
+
+idea.project.settings {
+    compiler.javac {
+        // Workaround on https://youtrack.jetbrains.com/issue/IDEA-154038.
+        javacAdditionalOptions = compilerArgs.join(' ')
+    }
+    runConfigurations {
+        defaults(org.jetbrains.gradle.ext.JUnit) {
+            vmParameters = defaultJvmArgs.join(' ')
+        }
+    }
 }
