@@ -34,10 +34,25 @@ import org.gradle.crypto.checksum.Checksum
 
 configurations {
     dbArtifacts
+    defaultsGenerator.extendsFrom(dbArtifacts)
+    dbZip {
+        canBeConsumed = true
+        canBeResolved = false
+    }
+    dbRelease {
+        canBeConsumed = true
+        canBeResolved = false
+    }
+    localDefaults {
+        canBeConsumed = true
+        canBeResolved = false
+    }
 }
 
 dependencies {
-    dbArtifacts(project(':ignite-runner'))
+    dbArtifacts project(':ignite-runner')
+
+    defaultsGenerator project(path: ':ignite-runner', configuration: 'defaultsGenerator')
 }
 
 def tokens = [
@@ -45,7 +60,7 @@ def tokens = [
         PACKAGE_NAME        : 'ignite3-db',
         PRODUCT_DISPLAY_NAME: 'Apache Ignite',
         APP_JAR             : "${project(':ignite-runner').name}-${project(':ignite-runner').version}.jar".toString(),
-        MAIN_CLASS          : 'org.apache.ignite.app.IgniteRunner',
+        MAIN_CLASS          : 'org.apache.ignite.internal.app.IgniteRunner',
         VARS_FILE_NAME      : 'vars.env',
         BOOTSTRAP_FILE_NAME : 'bootstrap-functions.sh',
         SETUP_JAVA_FILE_NAME: 'setup-java.sh'
@@ -71,6 +86,19 @@ task replaceZipScriptVars(type: Copy) {
     into "$buildDir/zip/"
 }
 
+def copyConfig = tasks.register('copyConfig', Copy) {
+    from "$rootDir/packaging/config/ignite-config.conf"
+    into layout.buildDirectory.dir("config")
+}
+
+def generateConfigDefaults = tasks.register('generateConfigDefaults', JavaExec) {
+    classpath = configurations.defaultsGenerator
+    mainClass = "org.apache.ignite.internal.configuration.generator.DefaultsGenerator"
+    dependsOn copyConfig
+    args layout.buildDirectory.file("config/ignite-config.conf").get()
+    outputs.file layout.buildDirectory.file("config/ignite-config.conf")
+}
+
 distributions {
     main {
         distributionBaseName = 'ignite3-db'
@@ -91,7 +119,7 @@ distributions {
             }
             into('etc') {
                 from "$buildDir/zip/${zipStartScriptTokens.VARS_FILE_NAME}"
-                from "$rootDir/packaging/config/ignite-config.conf"
+                from generateConfigDefaults
                 from "$buildDir/zip/ignite.java.util.logging.properties"
             }
             into('bin') {
@@ -117,16 +145,9 @@ task createChecksums(type: Checksum) {
     checksumAlgorithm = Checksum.Algorithm.SHA512
 }
 
-// Expose zip artifacts to be consumed by others
-configurations {
-    dbZip {
-        canBeConsumed = true
-        canBeResolved = false
-    }
-}
-
 artifacts {
     dbZip(distZip)
+    localDefaults generateConfigDefaults
 }
 
 // Explicitly create task so that the resulting artifact is not added to the configuration
@@ -213,7 +234,7 @@ ospackage {
             fileType CONFIG
             from "$buildDir/linux/service/vars.env"
             from "$buildDir/linux/ignite.java.util.logging.properties"
-            from "$rootDir/packaging/config/ignite-config.conf"
+            from generateConfigDefaults
         }
 
         into('etc') {
@@ -224,12 +245,7 @@ ospackage {
     link "/opt/ignite3db", "${packageTokens.INSTALL_DIR}"
 }
 
-configurations {
-    dbRelease {
-        canBeConsumed = true
-        canBeResolved = false
-    }
-}
+
 
 if (project.hasProperty('prepareRelease')) {
     artifacts {
@@ -253,7 +269,7 @@ setupBuilder {
 
     // Actually a classpath
     mainJar = "lib\\*"
-    mainClass = "org.apache.ignite.app.IgniteRunner"
+    mainClass = "org.apache.ignite.internal.app.IgniteRunner"
 
     licenseFile = "$rootDir/LICENSE"
 
@@ -275,6 +291,8 @@ setupBuilder {
                            "--add-opens=java.base/java.math=ALL-UNNAMED",
                            "--add-opens=java.base/java.util=ALL-UNNAMED",
                            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                           "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                           "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
                            "-Dio.netty.tryReflectionSetAccessible=true",
                            "-Djava.util.logging.config.file=etc\\ignite.java.util.logging.properties",
                            "-Dio.netty.tryReflectionSetAccessible=true"]
@@ -292,7 +310,7 @@ setupBuilder {
             from('log')
         }
         into('etc') {
-            from "${rootDir}/packaging/config/ignite-config.conf"
+            from generateConfigDefaults
         }
         into('etc') {
             from("ignite.java.util.logging.properties")
